--- a/src/components/SubscriberList/styles/subscriberList.scss
+++ b/src/components/SubscriberList/styles/subscriberList.scss
@@ -1,16 +1,4 @@
-$borderColor: #9e9e9e;
-$thColor: #ffab91;
-$tdHoverColor: #eeeeee;
-
-
-@function pxToRem($px) {
-  @return ($px/16)'rem';
-}
-
-@mixin hoverEffect($color, $time) {
-  background-color: $color;
-  transition: background-color $time;
-}
+@use "_variables";
 
 .subscribersList {
   padding: 15px;
