--- a/src/components/SubscriberList/styles/subscriberList.scss
+++ b/src/components/SubscriberList/styles/subscriberList.scss
@@ -1,4 +1,5 @@
-@use "_variables";
+@use "_variables" as *;
+
 
 .subscribersList {
   padding: 15px;
@@ -6,19 +7,27 @@
 
   &__label {
     text-align: start;
-    padding-block: 10px;
+    text-indent: 15px;
+    font-weight: bolder;
+    padding-block: 20px;
   }
 
   &--table {
     margin: 0;
     padding: 0;
     width: 100%;
-    border: 2px solid $borderColor;
+    border-collapse: collapse;
+    @include tableBorder(2px);
+
     &__tr {
       background-color: $thColor;
+      th {
+        @include tableBorder(1px);
+      }
     }
 
     tr {
+      border: 1px solid $borderColor;
       @include hoverEffect(none, 0.3s)
     }
     tr:hover:not(:first-child) {
@@ -26,8 +35,8 @@
     }
 
     &__td {
-      padding: 10px;
-      border: 1px solid $borderColor;
+      padding: 20px;
+      @include tableBorder(1px);
     }
   }
 }
